add jdk modular args for tests